# etherwallet

./: README.md
cli/: Cargo.toml
cli/src/: eip55_checksum.rs  main.rs
cli/src/middleware/: eip55_checksum.rs  mod.rs
cli/src/wallet/: bip39_mnemonic.rs
