[package]
name = "etherwallet"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
sha3 = "0.9.1"
hex = "0.4.3"
web3 = { version = "0.16.0", default-features = false, features = ["http", "http-tls"] }
